--- a/mahasiswa/unggah-pusat.html
+++ b/mahasiswa/unggah-pusat.html
@@ -68,7 +68,6 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="./index-default.html" aria-expanded="false">
                 <span>
-                  
                   <i class="ti ti-layout-dashboard"></i>
                 </span>
                 <span class="hide-menu">Dashboard</span>
@@ -77,7 +76,11 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="./unggah-pusat.html" aria-expanded="false">
                 <span>
-                  <img src="../assets/css/icons/document.svg" style="width: 20px;" alt="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-file">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                    <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" />
+                  </svg>                
                 </span>
                 <span class="hide-menu">Unggah Dokumen Pusat</span>
               </a>
@@ -85,7 +88,11 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="./unggah-jurusan.html" aria-expanded="false">
                 <span>
-                  <img src="../assets/css/icons/document.svg" style="width: 20px;" alt="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-file">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                    <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" />
+                  </svg>                
                 </span>
                 <span class="hide-menu">Unggah Dokumen Jurusan</span>
               </a>
@@ -93,7 +100,11 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="./unggah-TA.html" aria-expanded="false">
                 <span>
-                  <img src="../assets/css/icons/document.svg" style="width: 20px;" alt="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-file">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M14 3v4a1 1 0 0 0 1 1h4" />
+                    <path d="M17 21h-10a2 2 0 0 1 -2 -2v-14a2 2 0 0 1 2 -2h7l5 5v11a2 2 0 0 1 -2 2z" />
+                  </svg>                
                 </span>
                 <span class="hide-menu">Unggah Tugas Akhir</span>
               </a>
@@ -101,7 +112,18 @@
             <li class="sidebar-item">
               <a class="sidebar-link" href="./u.html" aria-expanded="false">
                 <span>
-                  <img src="../assets/css/icons/document.svg" style="width: 20px;" alt="">
+                  <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-circle-dashed-check">
+                    <path stroke="none" d="M0 0h24v24H0z" fill="none" />
+                    <path d="M8.56 3.69a9 9 0 0 0 -2.92 1.95" />
+                    <path d="M3.69 8.56a9 9 0 0 0 -.69 3.44" />
+                    <path d="M3.69 15.44a9 9 0 0 0 1.95 2.92" />
+                    <path d="M8.56 20.31a9 9 0 0 0 3.44 .69" />
+                    <path d="M15.44 20.31a9 9 0 0 0 2.92 -1.95" />
+                    <path d="M20.31 15.44a9 9 0 0 0 .69 -3.44" />
+                    <path d="M20.31 8.56a9 9 0 0 0 -1.95 -2.92" />
+                    <path d="M15.44 3.69a9 9 0 0 0 -3.44 -.69" />
+                    <path d="M9 12l2 2l4 -4" />
+                  </svg>
                 </span>
                 <span class="hide-menu">Status Verifikasi</span>
               </a>
