update footer on all unggah

--- a/mahasiswa/unggah-jurusan.html
+++ b/mahasiswa/unggah-jurusan.html
@@ -224,6 +224,18 @@
           </div>
         </div>
       </div>      
+      <!-- Footer Start -->
+      <footer class="app-footer">
+        <div class="footer-container">
+          <p>&copy; 2024 Politeknik Negeri Malang - Sistem Informasi Bebas Tanggungan TA</p>
+          <ul class="footer-links">
+            <li><a href="#">Kebijakan Privasi</a></li>
+            <li><a href="#">Syarat dan Ketentuan</a></li>
+            <li><a href="#">Kontak Kami</a></li>
+          </ul>
+        </div>
+      </footer>
+      <!-- Footer End -->
     </div>
   </div>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
