--- a/mahasiswa/unggah-pusat.html
+++ b/mahasiswa/unggah-pusat.html
@@ -39,7 +39,42 @@
       background-color: #e7f3ff;
       font-weight: bold;
     }
-  </style>
+
+  .app-footer {
+    background-color: #f8f9fa;
+    padding: 15px 20px;
+    border-top: 1px solid #ddd;
+    text-align: center;
+  }
+  .footer-container {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+  }
+  .app-footer p {
+    font-size: 14px;
+    color: #666;
+    margin-bottom: 10px;
+  }
+  .footer-links {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    gap: 15px;
+  }
+  .footer-links li {
+    font-size: 14px;
+  }
+  .footer-links a {
+    text-decoration: none;
+    color: #007bff;
+    transition: color 0.3s;
+  }
+  .footer-links a:hover {
+    color: #0056b3;
+  }
+</style>
 </head>
 
 <body>
@@ -224,6 +259,19 @@
           </div>
         </div>
       </div>      
+      <!-- Footer Start -->
+      <footer class="app-footer">
+        <div class="footer-container">
+          <p>&copy; 2024 Politeknik Negeri Malang - Sistem Informasi Bebas Tanggungan TA</p>
+          <ul class="footer-links">
+            <li><a href="#">Kebijakan Privasi</a></li>
+            <li><a href="#">Syarat dan Ketentuan</a></li>
+            <li><a href="#">Kontak Kami</a></li>
+          </ul>
+        </div>
+      </footer>
+      <!-- Footer End -->
+
     </div>
   </div>
   <script src="../assets/libs/jquery/dist/jquery.min.js"></script>
